Adds columns and rows using bootstrap css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,39 @@
           </ul>
         </div>
       </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="well">
+          <h3>Vacation Package #1: Dirtbag Traveler</h3>
+          <ul>
+            <li>Cost: $19.99</li>
+            <li>Dates: All Rainy Season</li>
+            <li>Activities: Panhanging, hanging out with the dumpster crew, and eating at the local soup kitech.</li><br><br>
+          </ul>
+        </div>
+      </div>
+        <div class="col-md-4">
+          <div class="well">
+            <h3>Vacation Package #2: The Lazy Susan</h3>
+            <ul>
+              <li>Cost: $199.99 (Susans get $20 off!)</li>
+              <li>Dates: Drizzly Season</li>
+              <li>Enjoy doing nothing! Comes with xfinity TV package and continental breakfast</li><br>
+            </ul>
+          </div>
+        </div>
+          <div class="col-md-4">
+            <div class="well">
+              <h3>Vacation Package #3: The Honeymooners</h3>
+              <ul>
+                <li>If you have to ask, you can't afford it.</li>
+                <li>Dates: Summer (because apparently that's when everyone gets married)</li>
+                <li>Probably won't leave the room, so have fun!</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
